Fix most of the unit tests. Started to migrate one integration test.